--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "babel-preset-es2015": "^6.22.0",
+    "body-parser": "^1.16.0",
+    "cookie-parser": "^1.4.3",
     "ejs": "2.4.1",
-    "express": "4.13.3"
+    "express": "4.13.3",
+    "mongoose": "^4.8.1"
   },
   "repository": {
     "type": "git",
@@ -22,5 +26,8 @@
     "heroku",
     "express"
   ],
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "babel-cli": "^6.22.2"
+  }
 }
