--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-preset-es2015": "^6.22.0",
     "body-parser": "^1.16.0",
     "cookie-parser": "^1.4.3",
+    "cors": "^2.8.1",
     "ejs": "2.4.1",
     "express": "4.13.3",
     "mongoose": "^4.8.1"
