--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "babel": "^6.5.2",
     "babel-preset-es2015": "^6.22.0",
     "body-parser": "^1.16.0",
     "cookie-parser": "^1.4.3",
