--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "babel": "^6.5.2",
     "babel-preset-es2015": "^6.22.0",
+    "babel-register": "^6.22.0",
     "body-parser": "^1.16.0",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.1",
